--- a/Frontend/app/src/main/res/layout/edit_profile.xml
+++ b/Frontend/app/src/main/res/layout/edit_profile.xml
@@ -43,13 +43,12 @@
         android:layout_marginEnd="50dp"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/labelName"
         app:layout_constraintTop_toBottomOf="@+id/dataTitle" />
-
-
 
 
     <Button
@@ -62,6 +61,7 @@
         android:layout_marginEnd="50dp"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/labelSurname"
@@ -77,6 +77,7 @@
         android:layout_marginEnd="50dp"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/labelUsername"
@@ -92,6 +93,7 @@
         android:layout_marginEnd="50dp"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/labelEmail"
@@ -105,9 +107,10 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="50dp"
+        android:inputType="textPassword"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
-        android:inputType="textPassword"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/labelPassword"
@@ -116,14 +119,15 @@
     <Button
         android:id="@+id/deleteAccountButton"
         style="@style/Widget.Material3.Button.TextButton"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="250dp"
         android:text="@string/delete"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
